# gemma4-engine

./: .gitignore  README.md  gemma4_single_user_prefill_decode_optimization_plan.md  optimization_plan.md  pyproject.toml
crates/gemma4-kernels/: Cargo.toml
crates/gemma4-kernels/src/: lib.rs
gemma4_engine/: backends.py  benchmark.py  cli.py  compare.py  config.py  inference.py  loader.py  server.py  speculative.py  stats.py  token_cache.py
src/gemma4_engine/: __init__.py  backends.py  benchmark.py  cli.py  compare.py  constants.py  inference.py  loader.py  server.py  stats.py
tests/: test_backends.py  test_benchmark.py  test_cli.py  test_config.py  test_inference.py  test_server.py  test_token_cache.py
