[project]
name = "gemma4-engine"
version = "0.1.0"
description = "CLI-first Gemma 4 E4B MLX inference engine with optional Rust/Metal kernels."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.26.0",
    "mlx-lm>=0.25.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
speculative = [
    "mlx-vlm>=0.6.3",
]
dev = [
    "pytest>=8.0.0",
    "maturin>=1.7.0",
]

[project.scripts]
gemma4 = "gemma4_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemma4_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
